@@ -15,28 +15,8 @@ import static com.minhvu.authservice.entity.Permission.*;
 public enum Role {
 
   USER(Collections.emptySet()),
-  ADMIN(
-          Set.of(
-                  ADMIN_READ,
-                  ADMIN_UPDATE,
-                  ADMIN_DELETE,
-                  ADMIN_CREATE,
-                  MANAGER_READ,
-                  MANAGER_UPDATE,
-                  MANAGER_DELETE,
-                  MANAGER_CREATE
-          )
-  ),
-  MANAGER(
-          Set.of(
-                  MANAGER_READ,
-                  MANAGER_UPDATE,
-                  MANAGER_DELETE,
-                  MANAGER_CREATE
-          )
-  )
-
-  ;
+  ADMIN(Collections.emptySet()),
+  MANAGER(Collections.emptySet());
 
   @Getter
   private final Set<Permission> permissions;
